--- a/alfaprime/src/main/webapp/resources/css/cssLayout.css
+++ b/alfaprime/src/main/webapp/resources/css/cssLayout.css
@@ -4,6 +4,8 @@
     color: white;
     padding: 5px;
     margin: 0px 0px 10px 0px;
+    font-family: Verdana, sans-serif;
+/*     height: 50px; */
 }
 
 #bottom {
@@ -12,6 +14,9 @@
     background-color: #c2dfef;
     padding: 5px;
     margin: 10px 0px 0px 0px;
+/*     height: 40px; */
+    font-family: Verdana, sans-serif;
+    font-size: 10px;
 }
 
 #left {
@@ -30,10 +35,10 @@
 
 .center_content {
     position: relative;
-    background-color: #dddddd;
+/*     background-color: #dddddd; */
     padding: 5px;
-    margin-top: 10px;
-    min-height: 40px
+    margin-top: 1px;
+    min-height: 90px
 }
 
 .left_content {
@@ -58,4 +63,10 @@
   color: black;
   font-weight : bold;
   text-decoration : underline;
+}
+
+#conteiner{
+	width: 1280px;
+	margin-left: auto;
+	margin-right: auto;
 }
