--- a/alfaprime/src/main/webapp/resources/css/default.css
+++ b/alfaprime/src/main/webapp/resources/css/default.css
@@ -1,6 +1,6 @@
 body {
     background:url(../images/negro.jpg), rgba(0,0,0,0);
-    font-size: 12px;
+    font-size: 9px;
     font-family: Verdana, "Verdana CE", Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
     color: #000000;
     margin: 10px;
@@ -26,4 +26,9 @@ a:link:hover, a:visited:hover {
   color: #045491;
   font-weight : bold;
   text-decoration : underline;
+}
+
+
+.ui-state-default .icon-add{
+	background-image: url(../images/add_icon2.png)
 }
