--- a/alfaprime/src/main/webapp/resources/css/login.css
+++ b/alfaprime/src/main/webapp/resources/css/login.css
@@ -15,3 +15,9 @@ body {
 .ui-state-default .icon-login{
 	background-image: url(../images/login.png)
 }
+
+#nombre{
+/* 	style="width: 300px;  height: 30px; " */
+	width: 300px;  
+	height: 30px;
+}
